Реализация витрины используя реактивный стек: - контроллеры, сервисы, репозитории, тесты